--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ sklearn==0.0
 streamlit==1.0.0
 protobuf~=3.19.0
 streamlit-option-menu==0.3.2
+matplotlib==3.5.2
+seaborn==0.11.2
+geopy==2.2.0
+folium==0.12.1.post1
